java p12 t01: fork wind-down output — 08-the-object-header split, 3 chunks refined
Fork B split 08-the-object-header.md on the layout/locking boundary into
08e-the-mark-word-locking-and-hashing.md (band B took 08e because the coordinator
owns 08d). All five files COMPLETE (end with FOOTER), 0 over cap.

08-the-object-header.md now exists, which resolves the dangling links from
08d-measuring-an-object.md and 10-strings.md.